# software

./: .gitignore  .gitmodules  README.md  package-lock.json
backend/: admin.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/lib/: auth.ts  supabaseClient.ts
frontend/src/pages/: AdminDashboard.tsx  AgentDashboard.tsx  Cockpit.tsx  Login.tsx
synthtetic/: data.py  kb.py  kb1.py  upload.py
synthtetic/sipbrain_data/: agents.csv  funds_fast_lookup.json  interactions.csv  investors.csv  knowledge_base.md  knowledge_base_part2.md  transactions.csv
